--- a/css/style.css
+++ b/css/style.css
@@ -1404,6 +1404,8 @@ a.breadcrumb-item {
 }
 
 @media only screen and (min-width:320px) and (max-width: 550px) {
+
+
   /*Digital Commerce Page */
   .column-2 {
     column-count: 1 !important;
@@ -1413,8 +1415,6 @@ a.breadcrumb-item {
 
 
 @media only screen and (min-width:320px) and (max-width: 767px) {
-
-
 
 
   .glyphicon-minus:before, .glyphicon-plus:before {
@@ -1599,6 +1599,11 @@ a.breadcrumb-item {
     font-size: 12px;
     margin-left: 0 !important;
   }
+
+.card-success-stories .border-team > .card-text .font14 {
+  	font-size: 13px !important;
+  }
+
   .text-accel-widget {
     margin-left: 8px;
     margin-top: -1px;
@@ -1869,9 +1874,16 @@ a.breadcrumb-item {
   }
 }
 
+
 /*Media Queries for 640px */
 
 @media only screen and (min-width:567px) and (max-width: 767px) {
+
+  .img-bank-section {
+      width: auto;
+      max-width: 100%;
+  }
+
 
 
 .mt-endeca {
